Checkpoint: Ready for styling

--- a/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/app/app.component.html
+++ b/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/app/app.component.html
@@ -47,11 +47,23 @@
         <mat-expansion-panel-header>
           <mat-panel-title> Hint #1 </mat-panel-title>
         </mat-expansion-panel-header>
-        <p>The flag is hidden has a record in the database for a different agency.</p>
+        <p>The flag is hidden as a record in the database for a different agency.</p>
       </mat-expansion-panel>
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title> Hint #2 </mat-panel-title>
+        </mat-expansion-panel-header>
+        <p>Is there a way to tamper with the SQL statement being run on the server?</p>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> Hint #3 </mat-panel-title>
+        </mat-expansion-panel-header>
+        <p>https://portswigger.net/web-security/sql-injection#retrieving-hidden-data</p>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> Hint #4 </mat-panel-title>
         </mat-expansion-panel-header>
         <div id="content--sql-wrapper">
           <h2>SQL That Ran</h2>
