--- a/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/app/app.component.html
+++ b/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/app/app.component.html
@@ -59,7 +59,7 @@
         <mat-expansion-panel-header>
           <mat-panel-title> Hint #3 </mat-panel-title>
         </mat-expansion-panel-header>
-        <p>https://portswigger.net/web-security/sql-injection#retrieving-hidden-data</p>
+        <p><a href="https://portswigger.net/web-security/sql-injection#retrieving-hidden-data"></a></p>
       </mat-expansion-panel>
       <mat-expansion-panel>
         <mat-expansion-panel-header>
