--- a/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/app/app.component.css
+++ b/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/app/app.component.css
@@ -25,6 +25,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-self: center;
     width: 50%;
     gap: 24px;
 }
