--- a/HomeBrewedChallenges/WebApps/BrokenAcessControls/summit-admin/summit-admin-frontend/src/App.css
+++ b/HomeBrewedChallenges/WebApps/BrokenAcessControls/summit-admin/summit-admin-frontend/src/App.css
@@ -40,3 +40,49 @@
 .read-the-docs {
   color: #888;
 }
+
+#content--header {
+  justify-self: end;
+}
+
+#content--container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 16px;
+}
+
+#content--card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 64px;
+  flex-grow: 1;
+}
+
+#app--container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
+.card--text {
+  white-space: pre-line;
+}
+
+.card--content-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+#content--hint-container {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  width: 30%;
+  padding: 36px 0;
+  text-align: left;
+}
