--- a/HomeBrewedChallenges/WebApps/BrokenAcessControls/summit-admin/summit-admin-frontend/src/index.css
+++ b/HomeBrewedChallenges/WebApps/BrokenAcessControls/summit-admin/summit-admin-frontend/src/index.css
@@ -15,28 +15,15 @@ h1 {
     border-radius: 8px;
     padding: 16px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 250px;
-    text-align: center;
+    width: 25%;
+    text-align: start;
     background-color: #fff;
-  }
-  
-  #content--container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
   }
 
   #root {
     padding: 0px;
     margin: 0px;
     max-width: none;
-  }
-
-  #app--container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
   }
 
   #header--container {
@@ -53,7 +40,7 @@ h1 {
 
   #footer--container {
     height: 50px;
-    margin-top: 14px;
+    margin-top: auto;
   }
 
   .blue-background {
