--- a/HomeBrewedChallenges/WebApps/BrokenAcessControls/summit-admin/summit-admin-frontend/src/App.css
+++ b/HomeBrewedChallenges/WebApps/BrokenAcessControls/summit-admin/summit-admin-frontend/src/App.css
@@ -5,34 +5,6 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
 }
@@ -85,4 +57,14 @@
   width: 30%;
   padding: 36px 0;
   text-align: left;
+}
+
+@media (max-width: 768px) {
+  #content--card-container {
+      gap: 4px;
+  }
+
+  #content--hint-container {
+      width: 95%;
+  }
 }
