--- a/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/app/app.component.html
+++ b/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/app/app.component.html
@@ -35,7 +35,7 @@
             <span>No results - Try again!</span>
           </div>
         }
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+        <mat-paginator [pageSizeOptions]="[10, 25, 50]"
           showFirstLastButtons
           aria-label="Select page of agents">
         </mat-paginator>
@@ -59,7 +59,8 @@
         <mat-expansion-panel-header>
           <mat-panel-title> Hint #3 </mat-panel-title>
         </mat-expansion-panel-header>
-        <p><a href="https://portswigger.net/web-security/sql-injection#retrieving-hidden-data"></a></p>
+        <p><a href="https://portswigger.net/web-security/sql-injection#retrieving-hidden-data">SQL Injection Basics</a></p>
+        <p>This challenge uses a D1 databse, so don't use semicolons in your solution!</p>
       </mat-expansion-panel>
       <mat-expansion-panel>
         <mat-expansion-panel-header>
@@ -72,6 +73,12 @@
           }
         </div>
       </mat-expansion-panel>
+      <mat-expansion-panel (opened)="hintFiveText = environment.HINT_FIVE_TEXT">
+        <mat-expansion-panel-header>
+          <mat-panel-title> Hint #5 - View Solution </mat-panel-title>
+        </mat-expansion-panel-header>
+        <span style="white-space: pre-line;">{{ hintFiveText }}</span>
+      </mat-expansion-panel>      
     </mat-accordion>
     
     @if(errorMessageFromCall) {
@@ -82,6 +89,6 @@
     }
   </div>
   
-  <div id="footer--container" class="blue-background">
+  <div id="footer--container">
   </div>
 </div>
