Download instruciton files

--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/register/register.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register--container">
-    <h1>Register</h1>
+    <h1>User Info</h1>
     @if(isFormSubmitted)
     {
         @if(formSubmissionResult) {
