--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/instructions/instructions.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/instructions/instructions.component.html
@@ -1,5 +1,5 @@
 <div class="instructions--container">
-    <h1>Challenges</h1>
+    <h1>Steps To Complete</h1>
     <div class="instructions-content--container">
         <div>
             <mat-card appearance="outlined">
@@ -8,12 +8,12 @@
                     <mat-card-subtitle>Step One</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
-                    <p>Peak's web user registration form is vulnerable. You were able to scrape LinkedIn for insurance agencies who do business with Peak Insurance. Can you find a valid user account?</p>
+                    <p>Peak's web user registration form is vulnerable. You were able to scrape LinkedIn for insurance agencies who do business with Peak Insurance. Can you enumerate a valid user account?</p>
                 </mat-card-content>
                 <mat-card-footer>
                     <mat-card-actions>
-                        <button mat-button (onClick)="unsecureFileReader('EMAIL_LIST.txt')">Download Email List</button>
-                        <button mat-button routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Begin</button>
+                        <a href="/files/EMAIL_LIST.txt" download><button mat-button>Download Email List</button></a>
+                        <button mat-button routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Begin Step One</button>
                     </mat-card-actions>
                 </mat-card-footer>
             </mat-card>
@@ -25,12 +25,12 @@
                     <mat-card-subtitle>Step Two</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
-                    <p>Peak's password database table was recently compromised! For $2000 you were able to purchase the list on a dark web forum. Can you log in?</p>
+                    <p>Peak's password database table was recently compromised! For a couple bitcoin you were able to purchase the password list on a dark web forum. Can you brute force log in?</p>
                 </mat-card-content>
                 <mat-card-footer>
                     <mat-card-actions>
-                        <button mat-button (onClick)="unsecureFileReader('PASSWORD_LIST.txt')">Download Password List</button>
-                        <button mat-button routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Begin</button>
+                        <a href="/files/PASSWORD_LIST.txt" download><button mat-button>Download Password List</button></a>
+                        <button mat-button routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Begin Step Two</button>
                     </mat-card-actions>
                 </mat-card-footer>
             </mat-card>
