--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/app.component.css
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/app.component.css
@@ -9,8 +9,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
+    padding: 16px 0 0 0;
     background-color: #fff;
+    width: 100%;
+    overflow: hidden;
 }
 
 #app-header--logo {
@@ -27,6 +29,7 @@
     padding: 0.5rem 1rem;
     margin-top: auto;
     height: 50px;
+    overflow: hidden;
 }
 
 .blue-background {
