--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.html
@@ -1,27 +1,73 @@
 <div class="login--container">
-    <h1>Login</h1>
-    <div class="login-content--form-container">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-            <mat-form-field>
-                <input matInput placeholder="Email" formControlName="email">
-                @if(loginForm.get('email')?.hasError('required')) {
-                    <mat-error>Email is required</mat-error>
-                }@else if (loginForm.get('email')?.hasError('email')) {
-                    <mat-error>Email is not valid</mat-error>
-                }
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="Password" formControlName="password" type="password">
-                @if(loginForm.get('password')?.hasError('required')) {
-                    <mat-error>Password is required</mat-error>
-                }
-            </mat-form-field>
-            <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">LOGIN</button>
-            <a href="/register"><button mat-stroked-button color="primary">REQUEST A LOGIN</button></a>
-            <a href="/"><button mat-stroked-button color="primary">BACK</button></a>
+    <div class="login-content--form-container mat-elevation-z3">
+        <form [formGroup]="loginForm" (ngSubmit)="onLoginFormSubmitted()">
+            <div class="form-content--field-container">
+                <h1 class="centered-text">Login</h1>
+                <mat-form-field appearance="outline">
+                    <input matInput placeholder="Email" formControlName="email">
+                    @if(loginForm.get('email')?.hasError('required')) {
+                        <mat-error>Email is required</mat-error>
+                    }@else if (loginForm.get('email')?.hasError('email')) {
+                        <mat-error>Email is not valid</mat-error>
+                    }
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <input matInput placeholder="Password" formControlName="password" type="password">
+                    @if(loginForm.get('password')?.hasError('required')) {
+                        <mat-error>Password is required</mat-error>
+                    }
+                </mat-form-field>
+            </div>
+            <div class="form-actions--button-contaienr">
+                <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">LOGIN</button>
+                <a href="/register"><button mat-stroked-button color="primary" type="button">REQUEST A LOGIN</button></a>
+            </div>
         </form>
-        <div>
-            <span>As a prerequisite to viewing the information on Peak's website, I agree to comply with all applicable privacy laws and to keep all proprietary information, all nonpublic personal information, and any other confidential information that I view or acquire on Peak's website, confidential. I understand that by logging in, I agree with these terms. </span>
-        </div>
+    </div>
+    <div>
+        <span>As a prerequisite to viewing the information on Peak's website, I agree to comply with all applicable privacy laws and to keep all proprietary information, all nonpublic personal information, and any other confidential information that I view or acquire on Peak's website, confidential. I understand that by logging in, I agree with these terms. </span>
+    </div>
+    <div class="login-content--hint-wrapper">
+        <mat-accordion>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title> Hint #1 </mat-panel-title>
+                </mat-expansion-panel-header>
+                <p>If you have not downloaded the username list, <a href="/files/EMAIL_LIST.txt" download>do so here</a>. If you did, procede to the next hint.</p>
+            </mat-expansion-panel>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title> Hint #2 </mat-panel-title>
+                </mat-expansion-panel-header>
+                <p>BurpSuite is a handy tool to automating requests</p>
+            </mat-expansion-panel>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title> Hint #3 </mat-panel-title>
+                </mat-expansion-panel-header>
+                <a href="https://portswigger.net/web-security/authentication/password-based#username-enumeration">https://portswigger.net/web-security/authentication/password-based#username-enumeration</a>
+            </mat-expansion-panel>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title> Hint #4 - Solution</mat-panel-title>
+                </mat-expansion-panel-header>
+                <ol>
+                    <li>Download the username list to your downloads directory</li>
+                    <li>Launch BurpSuite</li>
+                    <li>Depending on your BurpSuite configuration, either launch the BurpSuite browser or use a Browser Extension</li>
+                    <li>Browswer -> Fill out the user profile registration form manually with any info you want</li>
+                    <li>BurpSuite -> Proxy Tab -> Turn on intercept to start capturing traffic</li>
+                    <li>Browser -> Click register button to submit the form</li>
+                    <li>BurpSuite -> You should see /api/users OPTIONS requet -> Forward</li>
+                    <li>You should see /api/users POST requet -> Right Click -> Send to Intruder</li>
+                    <li>Toggle off the proxy intercept off -> Go to Intruder tab</li>
+                    <li>Highlight the email address you used inside the double quotes -> Click the 'Add S' button next to POSITIONS to make it a position variable</li>
+                    <li>In the 'Payload Configuration' section click load -> Selet the EMAIL_LIST.txt file</li>
+                    <li>In the 'Payload Encoding' section, toggle off URL Encoding</li>
+                    <li>Click the Start Attack button -> Wait for the attack to finish -> Sort be response codes</li>
+                    <li>Select the one with the 418 response code -> Review the request and see the email was <code>atorres&#64;gmail.com</code></li>
+                </ol>
+            </mat-expansion-panel>
+        </mat-accordion>
     </div>
 </div>
