--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/register/register.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/register/register.component.html
@@ -1,19 +1,17 @@
 <div class="register--container">
     <h1>User Info</h1>
-    @if(isFormSubmitted)
-    {
-        @if(messageToDisplayAfterSubmission) {
+    @if(isFormSubmitted){
+        @if(isFormSubmissionCallRunning) {
+            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        } @else {
             <div>
                 <span id="register-response--message">{{messageToDisplayAfterSubmission}}</span>
             </div>
             <div>
-                <a href="/"><button mat-raised-button color="primary" >Back To Steps</button></a>
-                <a href="/register"><button mat-stroked-button color="primary" >Create New User</button></a>
+                <a href="/"><button mat-raised-button color="primary">Back To Steps</button></a>
+                <a href="/register"><button mat-stroked-button color="primary">Create New User</button></a>
             </div>
-        } @else {
-            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
         }
-
     }@else {
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <mat-form-field>
