--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/instructions/instructions.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/instructions/instructions.component.html
@@ -8,7 +8,10 @@
                     <mat-card-subtitle>Step One</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
-                    <p>Peak Insurance's web user registration form is vulnerable! You were able to scrape LinkedIn for 1,000 insurance agencies who do business with Peak Insurance. Can you enumerate a valid user account?</p>
+                    <div>
+                        <div>Peak Insurance's web user registration form is vulnerable! You were able to scrape LinkedIn for 1,000 insurance agencies who do business with Peak Insurance.</div>
+                        <div>Can you enumerate a valid user account?</div>
+                    </div>
                 </mat-card-content>
                 <mat-card-footer>
                     <mat-card-actions>
@@ -25,7 +28,10 @@
                     <mat-card-subtitle>Step Two</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
-                    <p>Peak Insurance's password database was recently compromised! For a couple bitcoin you were able to purchase the 100,000 password list on a dark web forum. Can you access the secured site?</p>
+                    <div>
+                        <div>Peak Insurance's password database was recently compromised! For a couple bitcoin you were able to purchase the 100,000 password list on a dark web forum.</div>
+                        <div>Can you access the secured site?</div>
+                    </div>
                 </mat-card-content>
                 <mat-card-footer>
                     <mat-card-actions>
