--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.css
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.css
@@ -33,6 +33,10 @@
     gap: 8px;
 }
 
+.login-content--hint-wrapper {
+    padding-bottom: 32px;
+}
+
 .centered-text {
     text-align: center;;
 }
