Feature/summit-login (#37)
* Download instruciton files

* Register ready for styling

* Challenege working, ready for styling

* Login page styling done

* login, register, business | Ready for QC

--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/app.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div id="app--container">
   <div id="app-header--container">
-    <img id="app-header--logo" src="assets/images/Summit_Logo-with-tagline.svg">
+    <img id="app-header--logo" src="images/Summit_Logo-with-tagline.svg">
     <div class="blue-background">
       <span><i>Know</i> the people who know workers' comp.</span>
     </div>
   </div>
 
-  <div id="app-content--container">
+  <div>
     <router-outlet />
   </div>
 
