--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.html
@@ -69,7 +69,7 @@
                     <li>In the 'Payload Configuration' section click load -> Selet the PASSWORD_LIST.txt file</li>
                     <li>In the 'Payload Encoding' section, toggle off URL Encoding</li>
                     <li>Click the Start Attack button -> Wait for the attack to finish -> Sort be response codes</li>
-                    <li>There is one response code of 200 for password "mustag". Use the valid email and this password to login and get the flag</li>
+                    <li>There is one response code of 200 for password <code>mustang</code>. Use the valid email and this password to login and get the flag</li>
                 </ol>
             </mat-expansion-panel>
         </mat-accordion>
