--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/app.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div id="app--container">
   <div id="app-header--container">
-    <img id="app-header--logo" src="images/Summit_Logo-with-tagline.svg">
+    <img id="app-header--logo" src="images/peak_logo.svg">
     <div class="blue-background">
-      <span><i>Know</i> the people who know workers' comp.</span>
+      <span><i>Know</i> the people who do insurance.</span>
     </div>
   </div>
 
