--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/instructions/instructions.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/instructions/instructions.component.html
@@ -1,5 +1,5 @@
 <div class="instructions--container">
-    <h1>Steps To Complete</h1>
+    <h1>Attack Steps</h1>
     <div class="instructions-content--container">
         <div>
             <mat-card appearance="outlined">
@@ -16,8 +16,8 @@
                 </mat-card-content>
                 <mat-card-footer>
                     <mat-card-actions>
-                        <a href="/files/EMAIL_LIST.txt" download><button mat-button mat-stroked-button color="primary">Download Email List</button></a>
-                        <a href="/register"><button mat-button mat-raised-button color="primary">Begin Step One</button></a>
+                        <a href="/files/EMAIL_LIST.txt" download><button mat-button mat-stroked-button class="white-button">Download Email List</button></a>
+                        <a href="/register"><button mat-button mat-raised-button class="blue-button">Begin Step One</button></a>
                     </mat-card-actions>
                 </mat-card-footer>
             </mat-card>
@@ -37,8 +37,8 @@
                 </mat-card-content>
                 <mat-card-footer>
                     <mat-card-actions>
-                        <a href="/files/PASSWORD_LIST.txt" download><button mat-button mat-stroked-button color="primary">Download Password List</button></a>
-                        <a href="/login"><button mat-button mat-raised-button color="primary">Begin Step Two</button></a>
+                        <a href="/files/PASSWORD_LIST.txt" download><button mat-button mat-stroked-button class="white-button">Download Password List</button></a>
+                        <a href="/login"><button mat-button mat-raised-button class="blue-button">Begin Step Two</button></a>
                     </mat-card-actions>
                 </mat-card-footer>
             </mat-card>
