--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.css
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.css
@@ -40,3 +40,14 @@
 .centered-text {
     text-align: center;;
 }
+
+button.blue-button {
+    background-color:#004677;
+    color: white;
+}
+
+button.white-button {
+    background-color:white;
+    color: #004677;
+    border-color: #004677;
+}
