--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.html
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/login/login.component.html
@@ -22,8 +22,8 @@
                 </mat-form-field>
             </div>
             <div class="form-actions--button-contaienr">
-                <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">LOGIN</button>
-                <a href="/register"><button mat-stroked-button color="primary" type="button">REQUEST A LOGIN</button></a>
+                <button mat-raised-button class="blue-button" type="submit" [disabled]="loginForm.invalid">LOGIN</button>
+                <a href="/register"><button mat-stroked-button type="button" class="white-button">REQUEST A LOGIN</button></a>
             </div>
         </form>
     </div>
