--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/register/register.component.css
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/register/register.component.css
@@ -40,3 +40,14 @@
 .register-content--hint-wrapper {
     padding-bottom: 32px;
 }
+
+button.blue-button {
+    background-color:#004677;
+    color: white;
+}
+
+button.white-button {
+    background-color:white;
+    color: #004677;
+    border-color: #004677;
+}
