--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/business-center/business-center.component.css
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/src/app/components/business-center/business-center.component.css
@@ -13,8 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 50%;
+    width: auto;
     max-width: 1080px;
     padding: 0 16px 16px 16px;
-    gap: 32px;
 }
